--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<title>Correspondence between gene expression and co-methylation modules</title>
 
 	<!-- D3.js -->	
-    <script src="http://d3js.org/d3.v3.js"></script>
+    	<script src="https://d3js.org/d3.v3.js"></script>
 	<script src="d3.stretched.chord.js"></script>
 	<script src="d3.layout.chord.sort.js"></script>
 	
