--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
 	<title>Correspondence between gene expression and co-methylation modules</title>
 
 	<!-- D3.js -->	
-    	<script src="https://d3js.org/d3.v3.js"></script>
+    <script src="https://d3js.org/d3.v3.js"></script>
 	<script src="d3.stretched.chord.js"></script>
 	<script src="d3.layout.chord.sort.js"></script>
 	
 	<!-- jQuery -->
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 	
 	<!-- Open Sans & CSS -->
-	<link href='http://fonts.googleapis.com/css?family=Open+Sans:700,400,300' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Open+Sans:700,400,300' rel='stylesheet' type='text/css'>
 	  <style>
 		body {
 		  font-family: 'Open Sans', sans-serif;
