added module significance colors

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
   </head>
   <body>
  
-	<div class="title-h3">Genes overlapping between gene expression and gene co-methylation modules</div>
+	<div class="title-h3">Overlap between gene expression and gene co-methylation modules</div>
 
     <div id="chart"></div>
 	
