--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 	
 	<div style="width: 100%;">
 		<div class="explanation">
-		Many of the modules constructed by weighted gene co-expresson or co-methylation analsyis were correlated with either caste, or age (inner and outer bands, respectively). Significantly positive correlations are highlighted in red <span class="filled-circle" style="background-color: #ff3030" ></span>, and negative in blue <span class="filled-circle" style="background-color: #1e90ff" ></span>. Although conservation of modules between co-expression and co-methylation data sets was generally weak, two expression modules (E6 and E9) were conserved in the co-methylation data, highligted in orange <span class="filled-circle" style="background-color: #f38e23; opacity: 0.7" ></span>.
+		Many of the modules gene co-expression and co-methylation modules were correlated with either caste (inner band), or age (outer bands). Significantly positive correlations are highlighted in red <span class="filled-circle" style="background-color: #ff3030" ></span>, and negative in blue <span class="filled-circle" style="background-color: #1e90ff" ></span>. Although conservation of modules between co-expression and co-methylation data sets was generally weak, two expression modules (E6 and E9) were conserved in the co-methylation data, highligted in orange <span class="filled-circle" style="background-color: #f38e23; opacity: 0.7" ></span>.
 		</div>
 	</div>
 	
