--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 	
 	<div style="width: 100%;">
 		<div class="explanation">
-		Many of the modules gene co-expression and co-methylation modules were correlated with either caste (inner band), or age (outer bands). Significant correlations with the queen caste and old age are highlighted in red <span class="filled-circle" style="background-color: #ff3030" ></span>, while worker and young age correlations are highlighted in blue <span class="filled-circle" style="background-color: #1e90ff" ></span>. Although conservation of modules between co-expression and co-methylation datasets was generally weak, five expression modules (E1, E6, E9, E7 and E10) were conserved in the co-methylation data, and one methylation module (M16) was conserved in the expression data. Their connections are highlighted in orange <span class="filled-circle" style="background-color: #f38e23; opacity: 0.7" ></span>.
+		Many of the modules gene co-expression and co-methylation modules were correlated with either caste (inner band), or age (outer bands). Significant correlations with the queen caste and old age are highlighted in red <span class="filled-circle" style="background-color: #ff3030" ></span>, while worker and young age correlations are highlighted in blue <span class="filled-circle" style="background-color: #1e90ff" ></span>. Although conservation of modules between co-expression and co-methylation datasets was generally weak, four expression modules (E1, E6, E9 and E10) were conserved in the co-methylation data. Their connections are highlighted in orange <span class="filled-circle" style="background-color: #f38e23; opacity: 0.7" ></span>.
 		</div>
 	</div>
 	
